# fripuck2-radio

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  backtrace.sh  issues-journal.typ  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev  sdkconfig.esp32dev.old
lib/network/: network_config.h  secrets.h  tcp.c  tcp.h  udp.c  udp.h  wifi.c  wifi.h
lib/serial/: spi.c  spi.h  uart.c  uart.h
main/: CMakeLists.txt  TinyPngOut.c  button_e-puck2.c  http_server.c  main_e-puck2.c  rfcomm_e-puck2.c  utility.c  utility.h  wifi_manager.c  wifi_manager.h
src/: main.c
